# depth-graph-search

./: .env.example  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  docker-init.sql  pyproject.toml
.atl/: skill-registry.md
.engram/: manifest.json
.opencode/skills/commit-protocol/: SKILL.md
.opencode/skills/docs-sync/: SKILL.md
.opencode/skills/docs-sync/references/: doc-map.md
docs/: branching-strategy.md  changelog-convention.md  commit-convention.md
docs/architecture/: layers.md  overview.md  ports-and-adapters.md  strategies.md
docs/architecture/decisions/: ADR-001-postgresql-age.md  ADR-002-clean-architecture.md  ADR-003-dual-llm-providers.md  ADR-004-hybrid-search-pipeline.md  ADR-005-ingestion-pipeline.md  ADR-006-sdk-facade.md  ADR-007-async-architecture.md  ADR-008-http-api.md  ADR-009-cli-interface.md  ADR-010-openrouter-embeddings.md
docs/flows/: ingestion.md  search.md
docs/requirements/: functional.md  non-functional.md
src/depth_graph_search/: __init__.py
src/depth_graph_search/adapters/ingestion/: __init__.py  async_pipeline.py  pipeline.py
src/depth_graph_search/adapters/openai/: __init__.py  async_provider.py  provider.py
src/depth_graph_search/adapters/openrouter/: __init__.py  async_provider.py  provider.py
src/depth_graph_search/adapters/postgres/: __init__.py  async_repository.py  repository.py  schema.sql
src/depth_graph_search/adapters/search/: __init__.py  async_entity_resolution.py  async_pipeline.py  entity_resolution.py  pipeline.py
src/depth_graph_search/api/: __init__.py  config.py  dependencies.py  exceptions.py  lifespan.py  schemas.py
src/depth_graph_search/cli/: __init__.py  config.py  formatters.py  main.py
src/depth_graph_search/sdk/: __init__.py  async_client.py  client.py
tests/integration/: conftest.py
tests/integration/adapters/: test_async_postgres_repository.py  test_postgres_repository.py
tests/integration/api/: test_api.py
tests/mocks/: __init__.py  embedding_provider.py  entity_resolution.py  graph_repository.py  llm_provider.py
tests/unit/: conftest.py  test_async_ingestion_pipeline.py  test_ingestion_pipeline.py
tests/unit/adapters/: test_async_entity_resolution.py  test_async_openai_provider.py  test_async_openrouter_provider.py  test_async_postgres_repository.py  test_async_search_pipeline.py  test_entity_resolution.py  test_openai_provider.py  test_openrouter_provider.py  test_postgres_repository.py  test_search_pipeline.py
tests/unit/api/: test_config.py  test_exceptions.py  test_schemas.py
tests/unit/cli/: test_commands.py  test_config.py  test_formatters.py
tests/unit/domain/: test_entities.py
tests/unit/sdk/: test_async_client.py  test_client.py
(+14 files in other folders)
